--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/auth/[...nextauth]/route.js", "app/providers.jsx", "app/page.jsx", "app/components/LoginButton.jsx", "app/components/PostsList.jsx", "app/layout.jsx", "app/components/LoadingSpinner.jsx", "app/components/SearchResult.jsx", "app/auth/error/page.jsx", "app/auth/signin/page.jsx", "app/api/linkedin/search/route.js", "app/api/linkedin/posts/route.js"],
   "exclude": ["node_modules"]
 }
